--- a/Exam.html
+++ b/Exam.html
@@ -20,8 +20,8 @@
         </div>
 
         <div class="col-sm-12 col-md-6 col-lg-4">
-            <h2><a href="https://www.facebook.com/vdn.sg.coder.pts/" class="link">Facebook</a></h2>
-            <a href="https://www.facebook.com/vdn.sg.coder.pts/">
+            <h2><a href="https://www.facebook.com/profile.php?id=100024003142474" class="link">Facebook</a></h2>
+            <a href="https://www.facebook.com/profile.php?id=100024003142474">
                 <div class="img" id="face"></div>
             </a>
             <p></p>
