--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,8 @@
             <p class="subheading">Do you wanna contact me ??</p>
         </div>
 
-        <div class="col-sm-12 col-md-6 col-lg-4">
+
+        <div class="block">
             <h2><a href="https://www.facebook.com/vdn.sg.coder.pts" class="link">Facebook</a></h2>
             <a href="https://www.facebook.com/vdn.sg.coder.pts">
                 <div class="img" id="nhan"></div>
@@ -29,7 +30,7 @@
             <p>If you like just send me add friend me on Facebook</p>
         </div>
 
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-12 col-md-6 col-lg-3 block">
             <h2><a href="#" class="link" onclick="phone()">Phone Number</a></h2>
             <a href="#" onclick="phone()">
                 <div class="img" id="call"></div>
@@ -39,7 +40,17 @@
             <p>If you need me just call me in this number</p>
         </div>
 
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-12 col-md-6 col-lg-3 block small">
+            <h2><a href="#" class="link" onclick="email()">Email</a></h2>
+            <a href="#" onclick="email()">
+                <div class="img" id="email"></div>
+            </a>
+            <p></p>
+            <p><span>ducnhan141106@...</span></p>
+            <p>Just email me and i'll read them later</p>
+        </div>
+
+        <div class="col-sm-12 col-md-6 col-lg-3 block large">
             <h2><a href="#" class="link" onclick="email()">Email</a></h2>
             <a href="#" onclick="email()">
                 <div class="img" id="email"></div>
@@ -49,6 +60,8 @@
             <p>Just email me and i'll read them later</p>
         </div>
     </div>
+    <hr>
+    <footer>This is built by Nhan</footer>
     <script type="text/javascript" src="Web.js"></script>
 </body>
 
