--- a/Index.html
+++ b/Index.html
@@ -36,7 +36,7 @@
                 <div class="img" id="call"></div>
             </a>
             <p></p>
-            <p><span>0943778908</span></p>
+            <p><span>0937840446</span></p>
             <p>If you need me just call me in this number</p>
         </div>
 
@@ -46,7 +46,7 @@
                 <div class="img" id="email"></div>
             </a>
             <p></p>
-            <p><span>ducnhan141106@...</span></p>
+            <p><span>ducnhan141106@</span></p>
             <p>Just email me and i'll read them later</p>
         </div>
 
