--- a/Index.html
+++ b/Index.html
@@ -9,59 +9,51 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="Web.css">
-    <title>Info web</title>
+    <title>Say hi to DNhan</title>
 </head>
 
 <body>
-    <div class="row center">
-        <div class="col-sm-12 col-md-12 col-lg-12">
-            <h1 class="heading">Hi i'm Nhân</h1>
-            <p class="subheading">Do you wanna contact me ??</p>
-        </div>
-
-
-        <div class="block">
-            <h2><a href="https://www.facebook.com/vdn.sg.coder.pts" class="link">Facebook</a></h2>
-            <a href="https://www.facebook.com/vdn.sg.coder.pts">
-                <div class="img" id="nhan"></div>
-            </a>
-            <p></p>
-            <p><span>Vũ Đức Nhân</span></p>
-            <p>If you like just send me add friend me on Facebook</p>
-        </div>
-
-        <div class="col-sm-12 col-md-6 col-lg-3 block">
-            <h2><a href="#" class="link" onclick="phone()">Phone Number</a></h2>
-            <a href="#" onclick="phone()">
-                <div class="img" id="call"></div>
-            </a>
-            <p></p>
-            <p><span>0937840446</span></p>
-            <p>If you need me just call me in this number</p>
-        </div>
-
-        <div class="col-sm-12 col-md-6 col-lg-3 block small">
-            <h2><a href="#" class="link" onclick="email()">Email</a></h2>
-            <a href="#" onclick="email()">
-                <div class="img" id="email"></div>
-            </a>
-            <p></p>
-            <p><span>ducnhan141106@</span></p>
-            <p>Just email me and i'll read them later</p>
-        </div>
-
-        <div class="col-sm-12 col-md-6 col-lg-3 block large">
-            <h2><a href="#" class="link" onclick="email()">Email</a></h2>
-            <a href="#" onclick="email()">
-                <div class="img" id="email"></div>
-            </a>
-            <p></p>
-            <p><span>ducnhan141106@gmail.com</span></p>
-            <p>Just email me and i'll read them later</p>
+    <img class="header-background" src="jpeg//IMG_3536.HEIC">
+    <div class="menu">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="block d-block w-100">
+                        <h2><a href="https://www.facebook.com/vdn.sg.coder.pts" class="link header text">Facebook</a></h2>
+                        <a href="https://www.facebook.com/vdn.sg.coder.pts">
+                            <div class="img" id="nhan"></div>
+                        </a>
+                        <p></p>
+                        <p><span>Vũ Đức Nhân</span></p>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-sm-12 col-md-6 col-lg-3 block d-block w-100">
+                        <h2><a href="#" class="link header text" onclick="phone()">Phone Number</a></h2>
+                        <a href="#" onclick="phone()">
+                            <div class="img" id="call"></div>
+                        </a>
+                        <p></p>
+                        <p><span>0937840446</span></p>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </div>
-    <hr>
-    <footer>This is built by Nhan</footer>
     <script type="text/javascript" src="Web.js"></script>
 </body>
 
