--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
                         <p></p>
                     </div>
                 </div>
+                <div class="carousel-item">
+                    <div class="col-sm-12 col-md-6 col-lg-3 block d-block w-100">
+                        <h2><a href="#" class="link header text" onclick="email()">Phone Number</a></h2>
+                        <a href="#" onclick="email()">
+                            <div class="img" id="call"></div>
+                        </a>
+                        <p></p>
+                        <p><span>0937840446</span></p>
+                        <p></p>
+                    </div>
+                </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
