--- a/index.html
+++ b/index.html
@@ -1,71 +1,41 @@
-<html lang="vi">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="Web.css">
-    <title>Say hi to DNhan</title>
+    <link rel="stylesheet" href="index.css">
+    <title>vuducnhan.dev.lqh</title>
 </head>
-
 <body>
-    <img class="header-background" src="jpeg//IMG_3536.HEIC">
-    <div class="menu">
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <img class="background" src="img//screen-0.jpg"></img>
+    <div class="main">
+        <div class="header">
+            <div class="round" id="deco"><div class="round" id="avt"></div></div>
+            <p class="name">Vũ Đức Nhân</p>
+            <p class="des">✨14/11/06✨</p>
+        </div>
+        <div class="ilist"> 
+            <div class="items" style="animation-delay: 100ms;">
+                <a href="https://www.facebook.com/vuducnhan.dev.lqh"><div class="round face" id="ipic"></div></a>
+                <a class="iname" href="https://www.facebook.com/vuducnhan.dev.lqh">Vũ Đức Nhân</a>
             </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div class="block d-block w-100">
-                        <h2><a href="https://www.facebook.com/vdn.sg.coder.pts" class="link header text">Facebook</a></h2>
-                        <a href="https://www.facebook.com/vdn.sg.coder.pts">
-                            <div class="img" id="nhan"></div>
-                        </a>
-                        <p></p>
-                        <p><span>Vũ Đức Nhân</span></p>
-                        <p></p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="col-sm-12 col-md-6 col-lg-3 block d-block w-100">
-                        <h2><a href="#" class="link header text" onclick="phone()">Phone Number</a></h2>
-                        <a href="#" onclick="phone()">
-                            <div class="img" id="call"></div>
-                        </a>
-                        <p></p>
-                        <p><span>0937840446</span></p>
-                        <p></p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="col-sm-12 col-md-6 col-lg-3 block d-block w-100">
-                        <h2><a href="#" class="link header text" onclick="email()">Phone Number</a></h2>
-                        <a href="#" onclick="email()">
-                            <div class="img" id="call"></div>
-                        </a>
-                        <p></p>
-                        <p><span>0937840446</span></p>
-                        <p></p>
-                    </div>
-                </div>
+            <div class="items" style="animation-delay: 200ms;">
+                <a href="https://www.instagram.com/vu_dnhan.dev/"><div class="round insta" id="ipic"></div></a>
+                <a class="iname" href="https://www.instagram.com/vu_dnhan.dev/">vu_dnhan.dev</a>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+            <div class="items" style="animation-delay: 300ms;">
+                <div class="round gmail" id="ipic" onclick="email()"></div>
+                <p class="iname" onclick="email()">ducnhan141106@gmail.com</p>
+            </div>
+            <div class="items" style="animation-delay: 400ms;">
+                <div class="round vcb" id="ipic" onclick="bank()"></div>
+                <a class="iname" onclick="bank()">1034561329</a>
+            </div>
+            <div class="items" style="animation-delay: 500ms;">
+                <div class="round phone" id="ipic" onclick="phone()"></div>
+                <a class="iname" onclick="phone()">0937840446</a>
+            </div>
         </div>
     </div>
-    <script type="text/javascript" src="Web.js"></script>
 </body>
-
+<script src="index.js"></script>
 </html>
