--- a/index.html
+++ b/index.html
@@ -13,20 +13,24 @@
             <p class="name">Vũ Đức Nhân</p>
             <p class="des">✨14/11/06✨</p>
         </div>
-        <div class="ilist"> 
+        <div class="ilist">
             <div class="items" style="animation-delay: 100ms;">
+                <a href="https://dnhan3.github.io/quinhhuongthatdangieww/"><div class="round avt2" id="ipic"></div></a>
+                <a class="iname" href="https://dnhan3.github.io/quinhhuongthatdangieww/">Lê Quỳnh Hương</a>
+            </div>
+            <div class="items" style="animation-delay: 200ms;">
                 <a href="https://www.facebook.com/vuducnhan.dev.lqh"><div class="round face" id="ipic"></div></a>
                 <a class="iname" href="https://www.facebook.com/vuducnhan.dev.lqh">Vũ Đức Nhân</a>
             </div>
-            <div class="items" style="animation-delay: 200ms;">
+            <div class="items" style="animation-delay: 300ms;">
                 <a href="https://www.instagram.com/vu_dnhan.dev/"><div class="round insta" id="ipic"></div></a>
                 <a class="iname" href="https://www.instagram.com/vu_dnhan.dev/">vu_dnhan.dev</a>
             </div>
-            <div class="items" style="animation-delay: 300ms;">
+            <div class="items" style="animation-delay: 400ms;">
                 <div class="round gmail" id="ipic" onclick="email()"></div>
                 <p class="iname" onclick="email()">ducnhan141106@gmail.com</p>
             </div>
-            <div class="items" style="animation-delay: 400ms;">
+            <div class="items" style="animation-delay: 500ms;">
                 <div class="round vcb" id="ipic" onclick="bank()"></div>
                 <a class="iname" onclick="bank()">1034561329</a>
             </div>
