--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>vuducnhan.dev.lqh</title>
+    <title>vuducnhan.dev</title>
 </head>
 <body>
     <img class="background" src="img//screen-0.jpg"></img>
