--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             
             <div class="items" style="animation-delay: 100ms;">
                 <a href="https://www.facebook.com/vuducnhan.dev.lqh"><div class="round face" id="ipic"></div></a>
-                <a class="iname" href="https://www.facebook.com/vuducnhan.dev.lqh">Vũ Đức Nhân</a>
+                <a class="iname" href="https://www.facebook.com/vuducnhan.dev">Vũ Đức Nhân</a>
             </div>
             <div class="items" style="animation-delay: 200ms;">
                 <a href="https://www.instagram.com/vu_dnhan.dev/"><div class="round insta" id="ipic"></div></a>
