--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="ilist">
             
             <div class="items" style="animation-delay: 100ms;">
-                <a href="https://www.facebook.com/vuducnhan.dev.lqh"><div class="round face" id="ipic"></div></a>
+                <a href="https://www.facebook.com/vuducnhan.dev"><div class="round face" id="ipic"></div></a>
                 <a class="iname" href="https://www.facebook.com/vuducnhan.dev">Vũ Đức Nhân</a>
             </div>
             <div class="items" style="animation-delay: 200ms;">
